# pisco-mistral-ocr

./: .env  .gitignore  LICENSE  README.md  ejemplo.py  pyproject.toml
pisco_mistral_ocr/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
