[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisco-mistral-ocr"
version = "0.1.0"
description = "Un cliente asíncrono fácil de usar para la API de OCR y comprensión de documentos de Mistral AI."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["mistral", "ai", "ocr", "document understanding", "async"]
authors = [
    { name = "Tu Nombre", email = "tu@email.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.25.0", # Usar una versión razonablemente reciente
    "pydantic>=2.0",  # Aprovechar Pydantic v2
]

[project.urls]
Homepage = "https://github.com/tu_usuario/pisco-mistral-ocr" # Cambia esto
Repository = "https://github.com/tu_usuario/pisco-mistral-ocr" # Cambia esto

# Configuración opcional para herramientas de desarrollo
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "RUF"] # Ejemplo de reglas
ignore = []

[tool.black]
line-length = 88
